# fakecloud

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  codecov.yml  conformance-baseline-notes.md  conformance-baseline.json
crates/fakecloud-acm/: Cargo.toml
crates/fakecloud-acm/src/: lib.rs  service.rs  state.rs
crates/fakecloud-apigateway/: Cargo.toml
crates/fakecloud-apigateway/src/: data_plane.rs  dispatch.rs  facade.rs  helpers.rs  lambda_proxy.rs  lib.rs  model_validation.rs  service.rs  service_api_keys.rs  service_authorizers.rs  service_deployments.rs  service_extras.rs  service_integrations.rs  service_models.rs  service_request_validators.rs  service_rest_api_resources.rs  service_stages.rs  service_usage_plans.rs  service_vpc_links_etc.rs  state.rs  validation.rs  vtl.rs
crates/fakecloud-athena/: Cargo.toml
crates/fakecloud-athena/src/: lib.rs  service.rs  sql.rs  state.rs
crates/fakecloud-bedrock-agent/: Cargo.toml
crates/fakecloud-bedrock-agent-runtime/: Cargo.toml
crates/fakecloud-bedrock-agent-runtime/src/: eventstream.rs  lib.rs  service.rs  state.rs
crates/fakecloud-bedrock-agent/src/: lib.rs  service.rs  state.rs
crates/fakecloud-cloudformation/: Cargo.toml
crates/fakecloud-cloudformation/src/: extras.rs  input_constraints.rs  input_constraints_table.rs  lib.rs  resource_provisioner.rs  service.rs  state.rs  template.rs  xml_responses.rs
crates/fakecloud-cloudfront/: Cargo.toml
crates/fakecloud-cloudfront/src/: cfunctions.rs  cfunctions_service.rs  extras.rs  extras2.rs  extras2_service.rs  extras_service.rs  fle.rs  fle_service.rs  functions.rs  functions_service.rs  js_runtime.rs  lib.rs  model.rs  policies.rs  policies_service.rs  router.rs  service.rs  state.rs  streaming.rs  streaming_service.rs  tenants.rs  tenants_service.rs  xml_io.rs
crates/fakecloud-core/: Cargo.toml
crates/fakecloud-core/src/: auth.rs  auth_message.rs  delivery.rs  dispatch.rs  ecr_uri.rs  lib.rs  pagination.rs  protocol.rs  query.rs  service.rs  tags.rs
crates/fakecloud-e2e/: Cargo.toml
crates/fakecloud-e2e/tests/: acm.rs  acm_lifecycle.rs  apigateway.rs  apigatewayv2.rs  apigwv2_websocket.rs  appas_ecs.rs  appas_scheduled.rs  application_autoscaling.rs  athena.rs  bedrock.rs  bedrock_agent_introspection.rs  cfn_cognito.rs  cfn_lambda.rs  cfn_lambda_aux.rs  cloudformation.rs  cloudformation_acm.rs  cloudformation_apigateway.rs  cloudformation_apigatewayv2.rs  cloudformation_cloudfront.rs  cloudformation_cloudwatch_alarm.rs  cloudformation_cognito.rs  cloudformation_cw_dashboard.rs  cloudformation_ecr.rs  cloudformation_ecs.rs  cloudformation_elasticache.rs  cloudformation_elasticache_cluster.rs  cloudformation_elbv2.rs  cloudformation_events.rs  cloudformation_events_extras.rs  cloudformation_execute_change_set.rs  cloudformation_iam.rs  cloudformation_iam_extras.rs  cloudformation_kinesis.rs  cloudformation_kinesis_consumer.rs  cloudformation_kms.rs  cloudformation_lambda_aux.rs  cloudformation_logs.rs  cloudformation_logs_extras.rs  cloudformation_organizations.rs  cloudformation_rds.rs  (+131 more)
crates/fakecloud-e2e/tests/helpers/: mod.rs
crates/fakecloud-ecr/: Cargo.toml
crates/fakecloud-ecr/src/: lib.rs  lifecycle_ticker.rs  oci.rs  pull_through.rs  scanner.rs  service.rs  service_helpers.rs  service_tests.rs  signing.rs  state.rs
crates/fakecloud-ecs/: Cargo.toml
crates/fakecloud-ecs/src/: helpers.rs  lib.rs  placement.rs  runtime.rs  service.rs  service_account_settings.rs  service_clusters.rs  service_container_instances_etc.rs  service_daemons.rs  service_express_gateway.rs  service_services_resource.rs  service_tagging.rs  service_task_definitions.rs  service_tasks.rs  service_tests.rs  state.rs
crates/fakecloud-elbv2/: Cargo.toml
crates/fakecloud-elbv2/src/: accesslogs.rs  dataplane.rs  lib.rs  prober.rs  router.rs  service.rs  service_helpers.rs  service_tests.rs  state.rs
crates/fakecloud-glue/: Cargo.toml
crates/fakecloud-glue/src/: introspection.rs  jobs.rs  lib.rs  partition_filter.rs  service.rs  state.rs
crates/fakecloud-kms/: Cargo.toml
crates/fakecloud-kms/src/: api.rs  asym.rs  asym_ecdsa.rs  blob.rs  helpers.rs  hook.rs  lib.rs  mac.rs  provisioner.rs  service.rs  service_aliases.rs  service_crypto.rs  service_custom_store.rs  service_grants.rs  service_tests.rs  state.rs
crates/fakecloud-lambda/: Cargo.toml
crates/fakecloud-lambda/src/: eventstream.rs  extras.rs  filter.rs  lib.rs  resource_policy.rs  runtime.rs  service.rs  service_event_sources.rs  service_permissions.rs  service_tests.rs  state.rs
crates/fakecloud-organizations/: Cargo.toml
crates/fakecloud-organizations/src/: lib.rs  resolver.rs  service.rs  state.rs
crates/fakecloud-rds/: Cargo.toml
crates/fakecloud-rds/assets/mariadb/: Dockerfile  fakecloud_udf.c
crates/fakecloud-rds/assets/mysql/: 99-fakecloud-bootstrap.sql.tmpl  Dockerfile  fakecloud-bootstrap.sh  fakecloud_udf.c
crates/fakecloud-rds/assets/postgres/: Dockerfile  aws_commons--1.0--1.1.sql  aws_s3--1.0.sql  (+6 more)
crates/fakecloud-rds/src/: extras.rs  lib.rs  runtime.rs  service.rs  service_helpers.rs  service_tests.rs  state.rs  validation.rs
crates/fakecloud-route53/: Cargo.toml
crates/fakecloud-route53/src/: dnssec.rs  helpers.rs  lib.rs  model.rs  router.rs  service.rs  state.rs  xml_io.rs
crates/fakecloud-scheduler/: Cargo.toml
crates/fakecloud-scheduler/src/: delivery.rs  expr.rs  lib.rs  service.rs  simulation.rs  state.rs  ticker.rs
crates/fakecloud-sns/: Cargo.toml
crates/fakecloud-sns/src/: delivery.rs  helpers.rs  lib.rs  resource_policy.rs  service.rs  service_platform.rs  service_publish.rs  service_sms.rs  service_tests.rs  signing.rs  simulation.rs  state.rs
crates/fakecloud-stepfunctions/: Cargo.toml
crates/fakecloud-stepfunctions/src/: interpreter.rs  interpreter_helpers.rs  interpreter_tests.rs  intrinsics.rs  lib.rs  service.rs  state.rs
crates/fakecloud-testkit/: Cargo.toml
crates/fakecloud-testkit/src/: lib.rs
crates/fakecloud-wafv2/: Cargo.toml
crates/fakecloud-wafv2/src/: evaluator.rs  inspection.rs  lib.rs  service.rs  state.rs
(+481 files in other folders)
