[workspace]
members = [
    "crates/fakecloud-server",
    "crates/fakecloud-core",
    "crates/fakecloud-aws",
    "crates/fakecloud-sqs",
    "crates/fakecloud-sns",
    "crates/fakecloud-eventbridge",
    "crates/fakecloud-iam",
    "crates/fakecloud-organizations",
    "crates/fakecloud-ssm",
    "crates/fakecloud-s3",
    "crates/fakecloud-dynamodb",
    "crates/fakecloud-lambda",
    "crates/fakecloud-secretsmanager",
    "crates/fakecloud-logs",
    "crates/fakecloud-kms",
    "crates/fakecloud-cloudformation",
    "crates/fakecloud-ses",
    "crates/fakecloud-cognito",
    "crates/fakecloud-kinesis",
    "crates/fakecloud-rds",
    "crates/fakecloud-ecr",
    "crates/fakecloud-ecs",
    "crates/fakecloud-elasticache",
    "crates/fakecloud-elbv2",
    "crates/fakecloud-cloudfront",
    "crates/fakecloud-route53",
    "crates/fakecloud-acm",
    "crates/fakecloud-firehose",
    "crates/fakecloud-glue",
    "crates/fakecloud-cloudwatch",
    "crates/fakecloud-application-autoscaling",
    "crates/fakecloud-wafv2",
    "crates/fakecloud-athena",
    "crates/fakecloud-stepfunctions",
    "crates/fakecloud-scheduler",
    "crates/fakecloud-apigateway",
    "crates/fakecloud-apigatewayv2",
    "crates/fakecloud-bedrock",
    "crates/fakecloud-bedrock-agent",
    "crates/fakecloud-sdk",
    "crates/fakecloud-persistence",
    "crates/fakecloud-e2e",
    "crates/fakecloud-conformance",
    "crates/fakecloud-conformance-macros",
    "crates/fakecloud-tfacc",
    "crates/fakecloud-testkit",
    "crates/fakecloud-parity",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/faiscadev/fakecloud"
homepage = "https://fakecloud.dev"
rust-version = "1.94"
version = "0.13.3"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "signal", "sync", "process", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
percent-encoding = "2"
base64 = "0.22"
flate2 = "1"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
async-trait = "0.1"
parking_lot = "0.12"
md-5 = "0.10"
rand = "0.8"
rcgen = "0.13"
rsa = { version = "0.9", features = ["sha2", "pem", "pkcs5"] }
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
crc32c = "0.6"
crc32fast = "1"
crc64fast-nvme = "1"
reqwest = { version = "0.13", features = ["json"] }
zip = "2"
tempfile = "3"
regex = "1"
tokio-postgres = "0.7"
sqlparser = "0.61"

# Internal crates
fakecloud-core = { path = "crates/fakecloud-core", version = "0.13.3" }
fakecloud-aws = { path = "crates/fakecloud-aws", version = "0.13.3" }
fakecloud-sqs = { path = "crates/fakecloud-sqs", version = "0.13.3" }
fakecloud-sns = { path = "crates/fakecloud-sns", version = "0.13.3" }
fakecloud-eventbridge = { path = "crates/fakecloud-eventbridge", version = "0.13.3" }
fakecloud-iam = { path = "crates/fakecloud-iam", version = "0.13.3" }
fakecloud-organizations = { path = "crates/fakecloud-organizations", version = "0.13.3" }
fakecloud-ssm = { path = "crates/fakecloud-ssm", version = "0.13.3" }
fakecloud-s3 = { path = "crates/fakecloud-s3", version = "0.13.3" }
fakecloud-dynamodb = { path = "crates/fakecloud-dynamodb", version = "0.13.3" }
fakecloud-lambda = { path = "crates/fakecloud-lambda", version = "0.13.3" }
fakecloud-secretsmanager = { path = "crates/fakecloud-secretsmanager", version = "0.13.3" }
fakecloud-logs = { path = "crates/fakecloud-logs", version = "0.13.3" }
fakecloud-kms = { path = "crates/fakecloud-kms", version = "0.13.3" }
fakecloud-cloudformation = { path = "crates/fakecloud-cloudformation", version = "0.13.3" }
fakecloud-ses = { path = "crates/fakecloud-ses", version = "0.13.3" }
fakecloud-cognito = { path = "crates/fakecloud-cognito", version = "0.13.3" }
fakecloud-kinesis = { path = "crates/fakecloud-kinesis", version = "0.13.3" }
fakecloud-rds = { path = "crates/fakecloud-rds", version = "0.13.3" }
fakecloud-elasticache = { path = "crates/fakecloud-elasticache", version = "0.13.3" }
fakecloud-ecr = { path = "crates/fakecloud-ecr", version = "0.13.3" }
fakecloud-ecs = { path = "crates/fakecloud-ecs", version = "0.13.3" }
fakecloud-elbv2 = { path = "crates/fakecloud-elbv2", version = "0.13.3" }
fakecloud-cloudfront = { path = "crates/fakecloud-cloudfront", version = "0.13.3" }
fakecloud-route53 = { path = "crates/fakecloud-route53", version = "0.13.3" }
fakecloud-acm = { path = "crates/fakecloud-acm", version = "0.13.3" }
fakecloud-firehose = { path = "crates/fakecloud-firehose", version = "0.13.3" }
fakecloud-glue = { path = "crates/fakecloud-glue", version = "0.13.3" }
fakecloud-cloudwatch = { path = "crates/fakecloud-cloudwatch", version = "0.13.3" }
fakecloud-application-autoscaling = { path = "crates/fakecloud-application-autoscaling", version = "0.13.3" }
fakecloud-wafv2 = { path = "crates/fakecloud-wafv2", version = "0.13.3" }
fakecloud-athena = { path = "crates/fakecloud-athena", version = "0.13.3" }
fakecloud-stepfunctions = { path = "crates/fakecloud-stepfunctions", version = "0.13.3" }
fakecloud-scheduler = { path = "crates/fakecloud-scheduler", version = "0.13.3" }
fakecloud-apigateway = { path = "crates/fakecloud-apigateway", version = "0.13.3" }
fakecloud-apigatewayv2 = { path = "crates/fakecloud-apigatewayv2", version = "0.13.3" }
fakecloud-bedrock = { path = "crates/fakecloud-bedrock", version = "0.13.3" }
fakecloud-bedrock-agent = { path = "crates/fakecloud-bedrock-agent", version = "0.13.3" }
fakecloud-sdk = { path = "crates/fakecloud-sdk", version = "0.13.3" }
fakecloud-persistence = { path = "crates/fakecloud-persistence", version = "0.13.3" }

# Drop full DWARF on test binaries to keep `ld` under the GitHub runner's
# ~7 GB RAM budget. Backtraces still show file:line.
[profile.test]
debug = "line-tables-only"
