[package]
name = "fakecloud-acm"
description = "AWS Certificate Manager (ACM) implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
rcgen = { workspace = true }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["alloc", "block-padding"] }
md-5 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
