[package]
name = "fakecloud-bedrock-agent-runtime"
version = "0.13.3"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

fakecloud-bedrock-agent = { path = "../fakecloud-bedrock-agent" }
fakecloud-core = { path = "../fakecloud-core" }

[dev-dependencies]
fakecloud-testkit = { path = "../fakecloud-testkit" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
