[package]
name = "fakecloud-bedrock-agent-runtime"
description = "Bedrock Agent Runtime implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

fakecloud-bedrock-agent = { workspace = true }
fakecloud-core = { workspace = true }

[dev-dependencies]
fakecloud-testkit = { path = "../fakecloud-testkit" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
