[package]
name = "fakecloud-cloudfront"
description = "AWS CloudFront for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
fakecloud-persistence = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
boa_engine = "0.21"
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
