[package]
name = "fakecloud-e2e"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
aws-config = "1"
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-eventbridge = "1"
aws-sdk-iam = "1"
aws-sdk-organizations = "1"
aws-sdk-sts = "1"
aws-sdk-ssm = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-sdk-lambda = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-kms = "1"
aws-sdk-kinesis = "1"
aws-sdk-rds = "1"
aws-sdk-elasticache = "1"
aws-sdk-cloudformation = "1"
aws-sdk-ses = "1"
aws-sdk-sesv2 = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-sfn = "1"
aws-sdk-apigateway = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-bedrock = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-scheduler = "1"
aws-sdk-ecr = "1"
aws-sdk-ecs = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-cloudfront = "1"
tokio-postgres = "0.7"
aws-smithy-types = "1"
aws-credential-types = "1"
aws-types = "1"
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
fakecloud-sdk = { path = "../fakecloud-sdk" }
fakecloud-testkit = { path = "../fakecloud-testkit", features = ["sdk-clients"] }
tempfile = { workspace = true }
sha2 = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
mail-parser = "0.10"
rsa = { workspace = true }
x509-cert = { version = "0.2", features = ["pem"] }
