[package]
name = "fakecloud-elbv2"
description = "Elastic Load Balancing v2 (ALB/NLB/GWLB) for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
fakecloud-persistence = { workspace = true }
fakecloud-wafv2 = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "client-legacy", "http1"] }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
