[package]
name = "fakecloud-glue"
description = "AWS Glue Data Catalog implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
