[package]
name = "fakecloud-lambda"
description = "Lambda implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
fakecloud-persistence = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
percent-encoding = { workspace = true }
crc32fast = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
