[package]
name = "fakecloud-rds"
description = "Amazon RDS implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
fakecloud-persistence = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
mysql_async = "0.34"
base64 = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
