[package]
name = "fakecloud-route53"
description = "AWS Route 53 for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-cloudfront = { workspace = true }
fakecloud-core = { workspace = true }
fakecloud-elbv2 = { workspace = true }
fakecloud-logs = { workspace = true }
fakecloud-persistence = { workspace = true }
fakecloud-s3 = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
parking_lot = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
